--- a/values.yaml
+++ b/values.yaml
@@ -2,6 +2,11 @@ image:
   repository: nginx
   tag: "latest"
   pullPolicy: IfNotPresent
+
+service:
+  type: ClusterIP
+  port: 80
+
 serviceAccount:
   create: true
   name: ""
